# ResearchCrew

./: .gitignore  README.md  pyproject.toml  report.md
crew/: .gitignore  app.py  pyproject.toml
crew/src/researchcrew/: crew.py  main.py
crew/src/researchcrew/config/: tasks.yaml
crew/src/researchcrew/listeners/: custom_listener.py
crew/src/researchcrew/tools/: custom_tool.py
crew/tests/: test_custom_tool.py
src/researchai/: conversation_graph.py  crew.py  main.py
src/researchai/config/: agents.yaml  tasks.yaml
src/researchai/llm/: __init__.py  llm_client.py
src/researchai/tools/: custom_tool.py
src/researchcrew/: main.py
src/researchcrew/config/: agents.yaml  tasks.yaml
src/researchcrew/llm/: __init__.py
src/researchcrew/tools/: custom_tool.py
tests/: test_custom_tool.py
