[project]
name = "researchai"
version = "0.1.0"
description = "researchAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.1",
    "PyPDF2>=3.0.0",
]

[project.scripts]
researchai = "researchai.main:run"
run_crew = "researchai.main:run"
train = "researchai.main:train"
replay = "researchai.main:replay"
test = "researchai.main:test"
run_with_trigger = "researchai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
