[project]
name = "ResearchCrew"
version = "0.1.0"
description = "researchAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.1",
    "PyPDF2>=3.0.0",
]

[project.scripts]
researchcrew = "researchcrew.main:run"
run_crew = "researchcrew.main:run"
train = "researchcrew.main:train"
replay = "researchcrew.main:replay"
test = "researchcrew.main:test"
run_with_trigger = "researchcrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
